@@ -1,3 +1,4 @@
+1/23/14 require non-zero volume to be at least 0.1L, same as precision of volume indicator on beaker
 1/23/14 make pH picker advance faster when held (reduced intervalDelay to 40ms from 100ms)
 1/23/14 shorter points on graph indicators, move indicators closer to scale, less whitespace between scale and indicators (ok to overlap ticks)
 1/23/14 move 'Reset All' buttons to same position (lower right) in all screens
